Обновлен каталог изображений IMG, добавлена иконка вкладки страницы, поправлен логотип

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>GllacyShop</title>
-  <!-- <link rel="icon" type="image/png" href=""> -->
+  <link rel="icon" type="image/png" href="IMG/IceCream_icon.png">
   <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <a>
-        <img src="IMG/logo.png" width=154 height=64 alt="Логотип магазина">
+        <img src="IMG/Logo_shop.png" width=154 height=64 alt="Логотип магазина">
       </a>
       <ul>
         <li><a href="">Каталог</a></li>
