Добавлены изображения в index.html, перемещен <p> с временем работы в <header>

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
         <li><a href="">О компании</a></li>
       </ul>
       <ul>
-        <li><button type="button">Поиск</button></li>
+        <li><button type="button"><!--<img src="IMG/Loupe_icon.png">--> Поиск</button></li>
         <li><a href="">Вход</a></li>
         <li><button type="button">Корзина</button></li>
         </li>
       </ul>
     </nav>
-  </header>
-  <main>
+    <h1>Магазин мороженого</h1>
     <p>
       С 10 до 20, ежедневно<br>
       8 812 450-25-25
     </p>
-    <article>
-      <h1 class="visually-hidden">Предложения</h1>
+  </header>
+  <main>
+    <h2 class="visually-hidden">Предложения</h2>
+    <article class="offer_1">
+      <img src="IMG/IceCreams_1.png">
       <p>
         Крем-брюле и пломбир<br>
         с малиновым джемом
@@ -41,7 +43,7 @@
       <button type="button">Давайте оба!</button>
     </article>
     <section>
-      <h2>Малинка даром!</h2>
+      <h3>Малинка даром!</h3>
       <p>
         При покупке 2 кг любого фруктового мороженого, добавим<br>
         в ваш заказ банку малинового варенья бесплатно.
@@ -49,7 +51,7 @@
       <button type="button">Хочу варенье!</button>
     </section>
     <section>
-      <h2>Шоколадки даром!</h2>
+      <h3>Шоколадки даром!</h3>
       <p>
         При покупке 2 кг пломбира, добавим в ваш заказ упаковку<br>
         вкуснейшей шоколадной присыпки совершенно бесплатно.
@@ -59,26 +61,26 @@
     <section>
       <ul>
         <li>
-          <img src="" alt="Хит">
-          <img src="" alt="Мороженое 1">
+          <img src="IMG/Hit.png" alt="Хит">
+          <img src="IMG/Taste_1.png" alt="Мороженое 1">
           <p>310 ₽/кг</p>
           <button type="button">Сливочное с апельсиновым джемом и цитрусовой стружкой</button>
         </li>
         <li>
-          <img src="" alt="Хит">
-          <img src="" alt="Мороженое 2">
+          <img src="IMG/Hit.png" alt="Хит">
+          <img src="IMG/Taste_2.png" alt="Мороженое 2">
           <p>380 ₽/кг</p>
           <button type="button">Сливочно-кофейное с кусочками шоколада</button>
         </li>
         <li>
-          <img src="" alt="Хит">
-          <img src="" alt="Мороженое 3">
+          <img src="IMG/Hit.png" alt="Хит">
+          <img src="IMG/Taste_3.png" alt="Мороженое 3">
           <p>355 ₽/кг</p>
           <button type="button">Сливочно-клубничное с присыпкой из белого шоколада</button>
         </li>
         <li>
-          <img src="" alt="Хит">
-          <img src="" alt="Мороженое 4">
+          <img src="IMG/Hit.png" alt="Хит">
+          <img src="IMG/Taste_4.png" alt="Мороженое 4">
           <p>415 ₽/кг</p>
           <button type="button">Сливочное крем-брюле с карамельной подливкой</button>
         </li>
@@ -88,20 +90,20 @@
       <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
         собственного производства на развес</h3>
       <ul>
-        <img src="" alt="Иконка 1">
+        <img src="IMG/IceCream_icon.png" alt="Иконка 1">
         <p>Все наше мороженое изготавливается на собственном производстве,
           с использованием современного оборудования
           и проверенных временем технологий.</p>
-        <img src="" alt="Иконка 2">
+        <img src="IMG/Leaf_icon.png" alt="Иконка 2">
         <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего
           качества. Все дополнительные ингредиенты и добавки произведены из натурального,
           экологически чистого сырья.</p>
       </ul>
       <ul>
-        <img src="" alt="Иконка 3">
+        <img src="IMG/Cow_icon.png" alt="Иконка 3">
         <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний,
           с которыми нас связывает долговременное сотрудничество.</p>
-        <img src="" alt="Иконка 4">
+        <img src="IMG/Thermometer_icon.png" alt="Иконка 4">
         <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
           который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
       </ul>
@@ -119,8 +121,7 @@
       </form>
     </section>
     <article>
-      <img src="" alt="Карта с адресом">
-      <img src="" alt="Отметка на карте">
+      <img src="IMG/Map.png" alt="Карта с адресом">
       <section>
         <h5>Адрес главного офиса и офлайн-магазина:</h5>
         <p>
@@ -135,14 +136,14 @@
   </main>
   <footer>
     <ul>
-      <li><img src="" alt="Иконка Твиттер"></li>
-      <li><img src="" alt="Иконка Инстаграм"></li>
-      <li><img src="" alt="Иконка Фейсбук"></li>
-      <li><img src="" alt="Иконка ВКонтакте"></li>
+      <li><img src="IMG/Twitter_icon.png" alt="Иконка Твиттер"></li>
+      <li><img src="IMG/Instagram_icon.png" alt="Иконка Инстаграм"></li>
+      <li><img src="IMG/Facebook_icon.png" alt="Иконка Фейсбук"></li>
+      <li><img src="IMG/VK_icon.png" alt="Иконка ВКонтакте"></li>
     </ul>
     <ul>
       <li>
-        <img src="" alt="Иконка сердечко">
+        <img src="IMG/Heart_icon.png" alt="Иконка сердечко">
         <a href="">Для поставщиков</a>
       </li>
       <li><a href="">О производстве</a></li>
@@ -151,7 +152,7 @@
       <li><a href="">Наши документы</a></li>
       <li><a href="">Экологические стандарты</a></li>
     </ul>
-    <img src="" alt="HTML Academy">
+    <img src="IMG/Logo_html_Academy.png" alt="HTML Academy">
     <p>Сделано в HTML Academy © 2019</p>
   </footer>
 </body>
