index.html и index.css подправлены и дополнены

--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <title>GllacyShop</title>
-  <link rel="icon" type="image/png" href="IMG/IceCream_icon.png">
-  <link rel="stylesheet" href="css/index.css">
+  <link href="IMG/IceCream_icon.png" rel="icon" type="image/png">
+  <link href="CSS/normalize.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
         <img src="IMG/Logo_shop.png" width=154 height=64 alt="Логотип магазина">
       </a>
-      <ul>
-        <li><a href="">Каталог</a></li>
+      <ul class="site-navigation">
+        <li><button type="button">Каталог</button></li>
         <li><a href="">Доставка и оплата</a></li>
         <li><a href="">О компании</a></li>
       </ul>
       <ul>
         <li><button type="button"><!--<img src="IMG/Loupe_icon.png">--> Поиск</button></li>
-        <li><a href="">Вход</a></li>
+        <li><button type="button">Вход</button></li>
         <li><button type="button">Корзина</button></li>
         </li>
       </ul>
     </nav>
-    <h1>Магазин мороженого</h1>
+    <h1 class="visually-hidden">Магазин мороженого</h1>
     <p>
       С 10 до 20, ежедневно<br>
       8 812 450-25-25
