Дополнен index.css, Заменены изображения в IMG(некоторые png на svg)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="IMG/Logo_shop.png" width=154 height=64 alt="Логотип магазина">
+        <img src="IMG/logo.svg" width=154 height=64 alt="Логотип магазина">
       </a>
       <ul class="site-navigation">
         <li><button type="button">Каталог</button></li>
@@ -21,14 +21,14 @@
         <li><a href="">О компании</a></li>
       </ul>
       <ul class="user-navigation">
-        <li><button type="button"><!--<img src="IMG/Loupe_icon.png">--> Поиск</button></li>
+        <li><button type="button">Поиск</button></li>
         <li><a class="login-link" href="">Вход</a></li>
         <li><button type="button">Корзина</button></li>
         </li>
       </ul>
     </nav>
     <h1 class="visually-hidden">Магазин мороженого</h1>
-    <ul>
+    <ul class="working-time">
       <li>С 10 до 20, ежедневно</li>
       <li>8 812 450-25-25</li>
     </ul>
@@ -85,35 +85,35 @@
       <ul>
         <li>
           <div class="hit-icon">
-            <img src="IMG/Hit.png" alt="Хит">
+            <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_1.png" alt="Мороженое 1">
           </div>
           <p class="price">310 ₽/кг</p>
-          <button type="button">Сливочное с апельсиновым джемом и цитрусовой стружкой</button>
+          <a href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </li>
         <li>
           <div class="hit-icon">
-            <img src="IMG/Hit.png" alt="Хит">
+            <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_2.png" alt="Мороженое 2">
           </div>
           <p class="price">380 ₽/кг</p>
-          <button type="button">Сливочно-кофейное с кусочками шоколада</button>
+          <a href="">Сливочно-кофейное с кусочками шоколада</a>
         </li>
         <li>
           <div class="hit-icon">
-            <img src="IMG/Hit.png" alt="Хит">
+            <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_3.png" alt="Мороженое 3">
           </div>
           <p class="price">355 ₽/кг</p>
-          <button type="button">Сливочно-клубничное с присыпкой из белого шоколада</button>
+          <a href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </li>
         <li>
           <div class="hit-icon"></div>
-          <img src="IMG/Hit.png" alt="Хит">
+          <img src="IMG/hit.svg" alt="Хит">
           <img src="IMG/Taste_4.png" alt="Мороженое 4">
           </div>
           <p class="price">415 ₽/кг</p>
-          <button type="button">Сливочное крем-брюле с карамельной подливкой</button>
+          <a href="">Сливочное крем-брюле с карамельной подливкой</a>
         </li>
       </ul>
     </section>
@@ -122,12 +122,12 @@
       <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
         собственного производства на развес</h3>
       <ul>
-        <li><img src="IMG/IceCream_icon.png" alt="Иконка 1">
+        <li><img src="IMG/ice-cream.svg">
           <p>Все наше мороженое изготавливается на собственном производстве,
             с использованием современного оборудования
             и проверенных временем технологий.</p>
         </li>
-        <li><img src="IMG/Leaf_icon.png" alt="Иконка 2">
+        <li><img src="IMG/eco.svg" alt="Иконка 2">
           <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего
             качества. Все дополнительные ингредиенты и добавки произведены из натурального,
             экологически чистого сырья.</p>
@@ -135,11 +135,11 @@
       </ul>
       <ul>
         <li>
-          <img src="IMG/Cow_icon.png" alt="Иконка 3">
+          <img src="IMG/cow.svg" alt="Иконка 3">
           <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний,
             с которыми нас связывает долговременное сотрудничество.</p>
         </li>
-        <li><img src="IMG/Thermometer_icon.png" alt="Иконка 4">
+        <li><img src="IMG/thermometer.svg" alt="Иконка 4">
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
             который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </li>
@@ -148,7 +148,7 @@
 
     <article class="news">
       <h4>Новое в нашем блоге</h4>
-      <p>10 способов сервировки фруктовых щербетов к столу</p>
+      <a href="">10 способов сервировки фруктовых щербетов к столу</a>
     </article>
 
     <section class="mailing">
@@ -163,16 +163,12 @@
     </section>
 
     <article class="map">
-      <!-- <img src="IMG/Map.png" alt="Карта с адресом"> -->
-
       <section>
         <h5>Адрес главного офиса и офлайн-магазина:</h5>
-        <p>
-          ул. Большая Конюшенная 19/8, Санкт-Петербург<br>
-          Для заказов по телефону:<br>
-          8 812 450-25-25<br>
-          (с 10 до 20 ежедневно)
-        </p>
+          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+          <p>Для заказов по телефону:</p>
+          <p>8 812 450-25-25</p>
+          <p>(с 10 до 20 ежедневно)</p>
         <button type="button">Форма обратной связи</button>
       </section>
     </article>
@@ -180,27 +176,27 @@
 
   <footer class="main-footer">
     <ul class="social-media">
-      <li><button><img src="IMG/Twitter_icon.png" alt="Иконка Твиттер"></button></li>
-      <li><img src="IMG/Instagram_icon.png" alt="Иконка Инстаграм"></li>
-      <li><img src="IMG/Facebook_icon.png" alt="Иконка Фейсбук"></li>
-      <li><img src="IMG/VK_icon.png" alt="Иконка ВКонтакте"></li>
+      <li><button><img src="IMG/twitter.svg" alt="Иконка Твиттер"></button></li>
+      <li><button><img src="IMG/instagram.svg"></button></li>
+      <li><button><img src="IMG/fb.svg"></button></li>
+      <li><button><img src="IMG/vk.svg" alt="Иконка ВКонтакте"></button></li>
     </ul>
 
-    <ul class="menu-footer">
+    <ul class="menu-footer-first-column">
       <li>
-        <img src="IMG/Heart_icon.png" alt="Иконка сердечко">
+        <img src="IMG/heart.svg" alt="Иконка сердечко">
         <a href="">Для поставщиков</a>
       </li>
       <li><a href="">О производстве</a></li>
     </ul>
 
-    <ul class="menu-footer">
+    <ul class="menu-footer-second-column">
       <li><a href="">Наши документы</a></li>
       <li><a href="">Экологические стандарты</a></li>
     </ul>
 
     <div class="created-by">
-      <img src="IMG/Logo_html_Academy.png" alt="HTML Academy">
+      <img src="IMG/logo-htmlacademy.svg" alt="HTML Academy">
       <p>Сделано в HTML Academy © 2019</p>
     </div>
   </footer>
