Исправлен index.css, добавлено модальное окно(пока без стилизации)

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
           <a href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </li>
         <li>
-          <div class="hit-icon"></div>
-          <img src="IMG/hit.svg" alt="Хит">
-          <img src="IMG/Taste_4.png" alt="Мороженое 4">
+          <div class="hit-icon">
+            <img src="IMG/hit.svg" alt="Хит">
+            <img src="IMG/Taste_4.png" alt="Мороженое 4">
           </div>
           <p class="price">415 ₽/кг</p>
           <a href="">Сливочное крем-брюле с карамельной подливкой</a>
@@ -165,10 +165,10 @@
     <article class="map">
       <section>
         <h5>Адрес главного офиса и офлайн-магазина:</h5>
-          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-          <p>Для заказов по телефону:</p>
-          <p>8 812 450-25-25</p>
-          <p>(с 10 до 20 ежедневно)</p>
+        <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+        <p>Для заказов по телефону:</p>
+        <p>8 812 450-25-25</p>
+        <p>(с 10 до 20 ежедневно)</p>
         <button type="button">Форма обратной связи</button>
       </section>
     </article>
@@ -200,6 +200,17 @@
       <p>Сделано в HTML Academy © 2019</p>
     </div>
   </footer>
+
+
+  <section class="modal modal-login">
+    <form class="login-form">
+      <input type="email" placeholder="email@example.com">
+      <input type="password">
+      <button type="submit">Войти</button>
+      <a class="restore" href="">Забыли пароль?</a>
+      <a href="">Новая регистрация</a>
+    </form>
+  </section>
 </body>
 
 </html>
