--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>GllacyShop</title>
-  <link href="IMG/IceCream_icon.png" rel="icon" type="image/png">
+  <!-- Missing icon -->
+  <!--  <link href="IMG/IceCream_icon.png" rel="icon" type="image/png">-->
   <link href="CSS/normalize.css" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link href="CSS/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,19 +16,22 @@
       <a class="main-header-logo">
         <img src="IMG/logo.svg" width=154 height=64 alt="Логотип магазина">
       </a>
+
       <ul class="site-navigation">
         <li><button type="button">Каталог</button></li>
         <li><a href="">Доставка и оплата</a></li>
         <li><a href="">О компании</a></li>
       </ul>
+
       <ul class="user-navigation">
         <li><button type="button"><img src="IMG/loupe.svg" alt="Иконка поиска"></button></li>
         <li><a class="login-link" href="">Вход</a></li>
         <li><button type="button"><img src="IMG/basket.svg" alt="Корзина"></button></li>
-        </li>
       </ul>
     </nav>
+
     <h1 class="visually-hidden">Магазин мороженого</h1>
+
     <ul class="working-time">
       <li>С 10 до 20, ежедневно</li>
       <li>8 812 450-25-25</li>
@@ -36,48 +40,64 @@
 
   <main class="main-container">
     <h2 class="visually-hidden">Предложения</h2>
+
     <article class="special-offer">
-      <img src="IMG/IceCreams_1.png">
+      <img alt="Крем-брюле и пломбир с малиновым джемом" src="IMG/IceCreams_1.png" />
+
       <p>
-        Крем-брюле и пломбир<br>
+        Крем-брюле и пломбир
+        <br>
         с малиновым джемом
       </p>
+
       <button type="button">Давайте оба!</button>
     </article>
 
     <article class="special-offer">
-      <img src="IMG/IceCreams_2.png">
+      <img alt="Шоколадный пломбир и лимонный сорбет" src="IMG/IceCreams_2.png" />
+
       <p>
-        Шоколадный пломбир <br>
+        Шоколадный пломбир
+        <br>
         и лимонный сорбет
       </p>
+
       <button type="button">Давайте оба!</button>
     </article>
 
     <article class="special-offer">
-      <img src="IMG/IceCreams_3.png">
+      <img alt="Пломбир с помадкой и клубничный щербет" src="IMG/IceCreams_3.png" />
+
       <p>
-        Пломбир с помадкой <br>
+        Пломбир с помадкой
+        <br>
         и клубничный щербет
       </p>
+
       <button type="button">Давайте оба!</button>
     </article>
 
     <section class="banner">
       <h3>Малинка даром!</h3>
+
       <p>
-        При покупке 2 кг любого фруктового мороженого, добавим<br>
+        При покупке 2 кг любого фруктового мороженого, добавим
+        <br>
         в ваш заказ банку малинового варенья бесплатно.
       </p>
+
       <button type="button">Хочу варенье!</button>
     </section>
 
     <section class="banner">
       <h3>Шоколадки даром!</h3>
+
       <p>
-        При покупке 2 кг пломбира, добавим в ваш заказ упаковку<br>
+        При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+        <br>
         вкуснейшей шоколадной присыпки совершенно бесплатно.
       </p>
+
       <button type="button">Хочу шоколадки!</button>
     </section>
 
@@ -88,30 +108,37 @@
             <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_1.png" alt="Мороженое 1">
           </div>
+
           <p class="price">310 ₽/кг</p>
           <a href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </li>
+
         <li>
           <div class="hit-icon">
             <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_2.png" alt="Мороженое 2">
           </div>
+
           <p class="price">380 ₽/кг</p>
           <a href="">Сливочно-кофейное с кусочками шоколада</a>
         </li>
+
         <li>
           <div class="hit-icon">
             <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_3.png" alt="Мороженое 3">
           </div>
+
           <p class="price">355 ₽/кг</p>
           <a href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </li>
+
         <li>
           <div class="hit-icon">
             <img src="IMG/hit.svg" alt="Хит">
             <img src="IMG/Taste_4.png" alt="Мороженое 4">
           </div>
+
           <p class="price">415 ₽/кг</p>
           <a href="">Сливочное крем-брюле с карамельной подливкой</a>
         </li>
@@ -119,29 +146,45 @@
     </section>
 
     <section class="SEO">
-      <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
-        собственного производства на развес</h3>
-      <ul>
-        <li><img src="IMG/ice-cream.svg">
-          <p>Все наше мороженое изготавливается на собственном производстве,
-            с использованием современного оборудования
-            и проверенных временем технологий.</p>
-        </li>
-        <li><img src="IMG/eco.svg" alt="Иконка 2">
-          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего
-            качества. Все дополнительные ингредиенты и добавки произведены из натурального,
-            экологически чистого сырья.</p>
-        </li>
-      </ul>
+      <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+
       <ul>
         <li>
-          <img src="IMG/cow.svg" alt="Иконка 3">
-          <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний,
-            с которыми нас связывает долговременное сотрудничество.</p>
+          <img alt="Мороженое собственного производства" src="IMG/ice-cream.svg" />
+
+          <p>
+            Все наше мороженое изготавливается на собственном производстве,
+            с использованием современного оборудования
+            и проверенных временем технологий.
+          </p>
         </li>
-        <li><img src="IMG/thermometer.svg" alt="Иконка 4">
-          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
-            который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+
+        <li>
+          <img alt="Иконка 2" src="IMG/eco.svg" />
+
+          <p>
+            Для приготовления мороженого используются настоящие сливки и молоко высочайшего
+            качества. Все дополнительные ингредиенты и добавки произведены из натурального,
+            экологически чистого сырья.
+          </p>
+        </li>
+
+        <li>
+          <img alt="Иконка 3" src="IMG/cow.svg" />
+
+          <p>
+            Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний,
+            с которыми нас связывает долговременное сотрудничество.
+          </p>
+        </li>
+
+        <li>
+          <img alt="Иконка 4" src="IMG/thermometer.svg" />
+
+          <p>
+            Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
+            который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+          </p>
         </li>
       </ul>
     </section>
@@ -157,7 +200,11 @@
           Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
           что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
         </p>
-        <input type="email" placeholder="email@example.com">
+
+        <label>
+          <input type="email" placeholder="email@example.com" />
+        </label>
+
         <button type="submit">Отправить</button>
       </form>
     </section>
@@ -176,10 +223,10 @@
 
   <footer class="main-footer">
     <ul class="social-media">
-      <li><button><img src="IMG/twitter.svg" alt="Иконка Твиттер"></button></li>
-      <li><button><img src="IMG/instagram.svg"></button></li>
-      <li><button><img src="IMG/fb.svg"></button></li>
-      <li><button><img src="IMG/vk.svg" alt="Иконка ВКонтакте"></button></li>
+      <li><button><img alt="Иконка Twitter" src="IMG/twitter.svg" /></button></li>
+      <li><button><img alt="Иконка Instagram" src="IMG/instagram.svg" /></button></li>
+      <li><button><img alt="Иконка Facebook" src="IMG/fb.svg"></button></li>
+      <li><button><img alt="Иконка ВКонтакте" src="IMG/vk.svg"></button></li>
     </ul>
 
     <ul class="menu-footer-first-column">
@@ -187,6 +234,7 @@
         <img src="IMG/heart.svg" alt="Иконка сердечко">
         <a href="">Для поставщиков</a>
       </li>
+
       <li><a href="">О производстве</a></li>
     </ul>
 
@@ -204,9 +252,10 @@
 
   <section class="modal modal-login">
     <form class="login-form">
-      <input class="login" type="email" placeholder="email@example.com">
-      <input class="password" type="password">
+      <label><input class="login" type="email" placeholder="email@example.com" /></label>
+      <label><input class="password" type="password" /></label>
       <button class="button-sign-in" type="submit">Войти</button>
+
       <ul>
         <li><a class="restore" href="">Забыли пароль?</a></li>
         <li><a href="">Новая регистрация</a></li>
